[package]
name = "ncs"
version = "0.1.0"
authors = ["namn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.4"
urlencoding = "2.1.0"
# futures = "0.3.15"
tokio = { version = "1.8.1", features = ["full"] }
anyhow = "1.0.41"
xml = "0.0.1"
roxmltree = "0.14.1"
regex = "1.5.4"
once_cell = "1.8.0"
if_chain = "1.0.1"