[package]
name = "ncs"
version = "0.1.0"
authors = ["namn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.5"
fs_extra = "1.2.0"
urlencoding = "2.1.0"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.41"
thiserror = "1.0.26"
xml = "0.0.1"
roxmltree = "0.14.1"
regex = "1.5.4"
once_cell = "1.8.0"
if_chain = "1.0.1"
async-recursion = "0.3.2"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "4.0.17"
chrono = "0.4.19"